client/main.scss
/* Master levels */

body {
    min-height: 730px;
    min-width: 1440px;
    max-height: 730px;
    max-width: 1440px;
    background-image: url("/images/wood_light.jpg");
    background-repeat: no-repeat;
    background-size: 1440px 730px;
}

#render-target {
    height: 100%;
    width: 100%;
}

.ui.container {
    height: 100%;
    width: 100%;
}

/* LoginForm levels */

.ui.segment {
    background: rgba(255, 255, 255, 0.75);
}

/* GameList levels */

.ui.attached.segment {
    background: rgba(255, 255, 255, 0.75);
}

.ui.top.attached.header {
    background: rgba(255, 255, 255, 0.75);
}

#gameCardHeader {
    background-color: #F3F4F5;
}

#gameCardFooter {
    background-color: #F3F4F5;
}

/* GameBoard */

/* Rows and Columns */

.row {
    padding: 10px;   
}

.row:after {
    content: "";
    display: table;
    clear: both;
}

#mainRow {
    height: 90%;
    width: 100%;
    position: relative;
    padding-left: 70px;
}

.halfColumn {
    float: left;
    height: 100%;
    position: relative;
    padding: 0%;
}

.halfColumn:after {
    content: "";
    display: table;
    clear: both;
}

#leftColumn {
    width: 754px;
}

#rightColumn {
    width: 530px;
}

.column.dummy {
    padding: 0%;
    border: 0px solid black;
    background-color: transparent;
}

#dummyColumn1 {
    width: 25px;
}

.column {
    float: left;
    width: 100%;
    height: 100%;
    position: relative;
    padding: 20px;
    border-radius: 5px;
    background: rgba(244, 241, 222, 0.85);
}

.column:after {
    content: "";
    display: table;
    clear: both;
}

.column.smart {
    box-shadow: 5px 5px 5px grey;
}

#tableButtonsRow {
    height: 71%;
    width: 100%;
    padding: 0%;
}

#buttonsColumn {
    width: 211px;
    background-color: #E2E1B9;
    box-shadow: 0px 0px 0px;
}

#tableColumn {
    width: 518px;
}

#pointsColumn {
    height: 20%;
}

#dummyColumn2 {
    height: 25px;
}

#dummyColumn5 {
    width: 25px;
}

#handAreaColumn {
    width: 522px;
    height: 95%;
}

/* Areas and Wrappers */

.area {
    width: 100%;
    position: relative;
    padding: 10px;
    border-radius: 5px;
}

.wrapper {
    /* Using wrappers for di cards and playerAreas so that they can be grouped when appearing and animating */
    width: 100%;
    height: 100%;
}

#handArea {
    padding-top: 20px;
    padding-left: 20px;
    padding-right: 20px;
    height: 528px;
    width: 483px;
    background-color: #9B6A6C;
    transition: background-color 0.5s ease-in-out;
}

#tableArea {
    height: 372px;
    background-color: peachpuff;
    padding: 0px;
}

#pointsArea {
    height: 90px;
    background-color: floralwhite;
    border: 1px dashed gray;
}

/* Banners */

.banner {
    height: 20px;
    position: relative;
    font-size: 20px;
    text-align: center;
}

/* Buttons Column */

#buttonsRow1 {
    height: 120px;
    width: 100%;
    padding: 0%;
}

#buttonsRow2 {
    height: 95px;
    width: 172px;
    padding: 20px;
    border-radius: 5px;
    background-color: white;
}

#buttonsRow3 {
    position: relative;
    height: 150px;
    width: 172px;
    padding: 20px;
    border-radius: 5px;
    background-color: #F5F5F5;
    border: 1px solid black;
}

.dummyColumn3 {
    height: 5px;
}

.dummyColumn4 {
    height: 25px;
}

.topButton {
    position: relative;
    width: 172px;
}

.ui.button:disabled {
    /* Have to set disabled color on .ui.button instead of .topButton to override semantics.ui */
    opacity: 1 !important;
    background-color: #C8C8C8 !important;
}

#playerRoleIcon {
    position: absolute;
    top: 355px;
    right: 35px; 
    width: 25px;
}

#zhuIcon {
    position: absolute;
    top: 390px;
    right: 35px; 
    width: 25px;
}

/* Next area */

#nextAreaBanner {
    position: absolute;
    width: 132px;
    height: 40px;
    font-size: 14px;
    text-align: center;
}

.nextAreaItem {
    position: absolute;
    top: 30px; left: 0; bottom: 0; right: 0;
    text-align: center;
}  

.waitText {
    height: 30px;
    width: 152px;
    top: 70px;
    left: 10px;
    color: #009bff;
    font-style: italic;
    font-size: 14px;
}

.myButton {
    height: 50px;
    width: 130px;
    margin: auto;
    display: inline-block;
    padding: 5px 10px;
    color: white;
    background: #009bff;
    border-radius: 5px;
    font-weight: bold;
}

.myButton:disabled {
    background-color: #C8C8C8;
}

.myButton:active {
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
}

#placeholder {
    margin: auto;
    width: 50px;
    height: 50px;
}

/* Points area */

#pointsAreaBanner {
    position: absolute;
    width: 100%;
    top: 30px;
    color: #C0C0C0;
    font-size: 20px;
    text-align: center;
}

/* Di area */

#diAreaWrapper {
    position: absolute;
    padding-top: 65px;
    padding-left: 20px;
}

.diBanner {
    position: absolute;
    width: 100%;
    height: 40px;
    padding-top: 25px;
    text-align: center;
}

/* Table area */

#playerAreaWrapper {
    position: absolute;
}

#playerAreaWrapper:after {
    content: "";
    display: table;
    clear: both;
}

.playerArea {
    float: left;
    width: 50%;
    height: 50%;
    position: relative;
    padding: 15px;
    border-radius: 5px;
    overflow-y: scroll;
    transition: border 0.5s ease-in-out;
}

#delayBorderTransition {
    /* Turned on when points are being collected and gold border is appearing for first player in next round, need border to appear slowly to not show up before points are collected */
    transition: border 3.5s ease-in-out;
}

#tableAreaShadow{
    width: 100%;
    height: 100%;
    position: relative;
    bottom: 0px;
    left: 0px;
    border-radius: 5px;
    background-color: black;
}

.tableBanner {
    position: relative;
    width: 100%;
    height: 35px;
    text-align: center;
}
/* ... */

